--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,12 +30,12 @@ main {
 }
 
 footer {
-  margin-top: 10%;
-  padding: 10%;
-  background-color: #123;
+  margin-top: 3%;
+  padding: 4%;
+  background-color: var(--cor-tres);
   color: #fff;
   width: 100%;
-  height: 100px;
+  height: 72px;
   text-align: center;
 }
 
@@ -44,22 +44,26 @@ footer {
   display: flex;
   flex-direction: column-reverse;
   width: 350px;
+  background-color: var(--cor-cinco);
+  color: var(--cor-um);
 }
 
 .tela_calc {
-  border: 1px solid #123;
+  border: 1px solid var(--cor-um);
   border-radius: 5px;
   height: 50px;
   font-size: 40px;
   text-align: right;
+  box-shadow: inset 3px 3px 25px -12px var(--cor-um);
 }
 
 .tela_simbolo {
-  border: 1px solid red;
+  border: 1px solid var(--cor-um);
   border-radius: 5px;
   height: 50px;
   font-size: 40px;
   text-align: right;
+  box-shadow: inset 3px 3px 25px -12px var(--cor-um);
 }
 
 .escondido {
